# shop-graph

./: .gitignore  README.md  main.py  pyproject.toml
backend/: test-filter.py  test-planner.py  test-search.py
backend/src/: app.py
backend/src/agent/: graph.py  models.py  state.py
backend/src/agent/nodes/: filter.py  planner.py  search.py
